Archive/Version 2/styles.css
/* ... */
.flair-about-1 {
  width: 12%;
  top: 35%;
  left: 12%;
}

.flair-about-2 {
  width: 5.5%;
  top: 15%;
  right: 10%;
}

.flair-about-3 {
  width: 8%;
  top: 65%;
  right: 15%;
}

.flair-about-3 {
  width: 8%;
  top: 65%;
  right: 15%;
}

.flair-about-4 {
  width: 8%;
  top: 120%;
  left: 8%;
}

.flair-about-5 {
  width: 8%;
  top: 180%;
  right: 8%;
}

@media (max-width: 768px) {
  .flair {
    display: none;
  }
}

/* -------------------- NAVIGATION BAR -------------------- */

.navbar {
  padding: 0.8rem;
  font-family: "Sen", sans-serif;
}

.navbar-logo {
  width: 45px;
}

.navbar-bg {
  background-color: var(--color-theme-dark);
}

.navbar-nav li {
  padding-right: 28px;
}

.nav-link {
  font-size: 22px !important;
  color: white !important;
}

.nav-link:hover {
  color: white !important;
}

.navbar-toggler {
  background-color: white !important;
}

/* -------------------- FANCY TITLE LINES -------------------- */

.hr-text {
  height: 1.5em;
  position: relative;
  font-size: 36px;
  font-weight: 700;
  text-align: center;
  line-height: 1em;
  outline: 0;
  border: 0;
}

.hr-text::before {
  content: "";
  width: 100%;
  height: 4px;
  top: 50%;
  left: 0;
  position: absolute;
  background: linear-gradient(to right, transparent, white, transparent);
}

.hr-text::after {
  content: attr(data-content);
  position: relative;
  display: inline-block;
  padding: 0 0.5em;
  line-height: 1.5em;
  color: white;
  background-color: var(--color-theme-dark);
}

/* -------------------- BUTTONS -------------------- */

.page-btn {
  margin: 15px;
  padding: 12px 2em;
  border: none;
  border-radius: 25px;
  font-size: 1.25em;
  font-weight: 500;
  text-decoration: none;
  color: white;
  background: var(--color-theme-light);
}

/* -------------------- HOME BANNER -------------------- */

.main-banner {
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.banner-text {
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  color: white;
}

.banner-text h1 {
  font-size: 150px;
  font-weight: 700;
}

.banner-text h2 {
  font-size: 60px;
  font-weight: 700;
}

@media (max-width: 768px) {
  .banner-text h1 {
    font-size: 60px;
  }
  .banner-text h2 {
    font-size: 30px;
  }
}

/* /////////////////////////////////////////// HOME PAGE /////////////////////////////////////////// */

/* -------------------- VIDEO BACKGROUND -------------------- */

.video-background {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.video-filter {
  width: 100%;
  height: 100%;
  position: absolute;
  background: black;
  opacity: 60%;
}

/* -------------------- ABOUT ME -------------------- */

.about-me-avatar {
  width: 250px;
}

.about-me-container {
  width: 100%;
  height: auto;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
  border-radius: 15px;
  text-align: center;
  background: white;
  color: var(--color-theme-dark);
}

.about-me-container p {
  padding: 50px 25px;
  font-size: 20px;
  font-weight: 600;
}

.about-me-avatar-hand-left,
.about-me-avatar-hand-right {
  width: 50px;
  bottom: -17.5px;
  position: absolute;
}

.about-me-avatar-hand-left {
  right: 40%;
}

.about-me-avatar-hand-right {
  left: 40%;
}

@media (max-width: 768px) {
  .about-me-avatar-hand-left {
    /* transform: rotate(-90deg);
        top: 35px;
        right: -21px; */
    display: none;
  }
  .about-me-avatar-hand-right {
    /* transform: rotate(90deg);
        top: 35px;
        left: -21px; */
    display: none;
  }
  .bubble-icon {
    width: 70px !important;
  }
}

.about-me-animation-container {
  width: 100%;
  height: 300px;
  position: absolute;
}

.bubble-icon {
  width: 100px;
  position: absolute;
  opacity: 0;
}

.about-img-1 {
  left: 10%;
  animation: bubble-float var(--about-icon-anim-time) infinite 1s ease-in;
}

.about-img-2 {
  left: 20%;
  animation: bubble-float var(--about-icon-anim-time) infinite 2s ease-in;
}

.about-img-3 {
  left: 30%;
  animation: bubble-float var(--about-icon-anim-time) infinite 0s ease-in;
}

.about-img-4 {
  right: 30%;
  animation: bubble-float var(--about-icon-anim-time) infinite 0.5s ease-in;
}

.about-img-5 {
  right: 20%;
  animation: bubble-float var(--about-icon-anim-time) infinite 2.5s ease-in;
}

.about-img-6 {
  right: 10%;
  animation: bubble-float var(--about-icon-anim-time) infinite 1.5s ease-in;
}

@keyframes bubble-float {
  0% {
    bottom: -90px;
    transform: translateX(0);
    opacity: 1;
  }
  33% {
    transform: translateX(10px);
  }
  66% {
    transform: translateX(-10px);
  }
  90% {
    opacity: 1;
  }
  100% {
    bottom: 75%;
    transform: translateX(0);
    opacity: 0;
  }
}

/* -------------------- MY PROJECTS -------------------- */

.overlay-card {
  width: 1200px;
  height: 350px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--color-theme-dark);
  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
  transition: 0.5s all;
}

.overlay-card:hover {
  transform: translateY(-5px);
  cursor: pointer;
}

.overlay-card::before {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  top: 0;
  left: 0;
  content: "";
  position: absolute;
  display: block;
  background: linear-gradient(rgba(0, 0, 53, 0.9), rgba(0, 153, 255, 1));
  transition: 0.5s all;
  opacity: 0;
  z-index: 2;
}

.overlay-card:hover::before {
  opacity: 1;
}

.overlay-card img {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  top: 0;
  left: 0;
  position: absolute;
  object-fit: cover;
}

.overlay-card .overlay-card-info {
  width: 100%;
  height: 100%;
  color: white;
  opacity: 0;
  transition: 0.5s all;
  z-index: 5;
}

.overlay-card:hover .overlay-card-info {
  opacity: 1;
}
/* ... */

